--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -532,14 +532,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "c7b4c421-59d4-467d-8675-805b55715d7f",
       "metadata": {
         "id": "c7b4c421-59d4-467d-8675-805b55715d7f"
       },
       "outputs": [],
       "source": [
-        "#si-prime"
+        "#si-prime\n",
+        "def isPrime(n):\n",
+        "  return n > 1 and all(n % i for i in range(2, int(n**0.5) + 1))"
       ]
     },
     {
@@ -558,14 +560,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "cd8f1a7a-d9cf-4498-a677-e17d64d0eea0",
       "metadata": {
         "id": "cd8f1a7a-d9cf-4498-a677-e17d64d0eea0"
       },
       "outputs": [],
       "source": [
-        "#si-taxi"
+        "#si-\n",
+        "def taxiPrice(distance):\n",
+        "  base_fee = 4.00\n",
+        "  charge_per_140m = 0.25\n",
+        "  price = base_fee + (distance * 1000 //140) * charge_per_140m\n",
+        "  return price"
       ]
     },
     {
@@ -621,14 +628,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "9d3b9a2b-248e-4fda-b9a5-8adbc43cc2d0",
       "metadata": {
         "id": "9d3b9a2b-248e-4fda-b9a5-8adbc43cc2d0"
       },
       "outputs": [],
       "source": [
-        "#si-fibonacci"
+        "#si-fibonacci\n",
+        "def fib(n):\n",
+        "  if n <= 1:\n",
+        "    return n\n",
+        "  else:\n",
+        "    return fib(n - 2) + fib(n - 2)"
       ]
     },
     {
