--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -253,14 +253,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "679c4ad5-81eb-428d-9665-309ed2c4f870",
       "metadata": {
-        "id": "679c4ad5-81eb-428d-9665-309ed2c4f870"
+        "id": "679c4ad5-81eb-428d-9665-309ed2c4f870",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "68529e78-2982-4c54-dd0b-445f557e323b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A\n",
+            "Long\n",
+            "Time\n",
+            "Ago\n",
+            "In\n",
+            "A\n",
+            "Galaxy\n",
+            "Far\n",
+            "Far\n",
+            "Away\n"
+          ]
+        }
+      ],
       "source": [
-        "#si-print-loop"
+        "#si-print-loop\n",
+        "words = [\"A\",\"Long\",\"Time\",\"Ago\",\"In\",\"A\",\"Galaxy\",\"Far\",\"Far\",\"Away\"]\n",
+        "for word in words:\n",
+        "  print (word)"
       ]
     },
     {
