--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -426,14 +426,63 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "id": "cc849af4-8f06-403d-a3a0-2869a742d58f",
       "metadata": {
-        "id": "cc849af4-8f06-403d-a3a0-2869a742d58f"
+        "id": "cc849af4-8f06-403d-a3a0-2869a742d58f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5c6b9340-1d78-4b51-a6f2-8b4c351bbd16"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "422\n",
+            "412\n",
+            "402\n",
+            "392\n",
+            "382\n",
+            "372\n",
+            "362\n",
+            "352\n",
+            "342\n",
+            "332\n",
+            "322\n",
+            "312\n",
+            "302\n",
+            "292\n",
+            "282\n",
+            "272\n",
+            "262\n",
+            "252\n",
+            "242\n",
+            "232\n",
+            "222\n",
+            "212\n",
+            "202\n",
+            "192\n",
+            "182\n",
+            "172\n",
+            "162\n",
+            "152\n",
+            "142\n",
+            "132\n",
+            "122\n",
+            "112\n",
+            "102\n",
+            "92\n"
+          ]
+        }
+      ],
       "source": [
-        "#si-while-loop"
+        "#si-while-loop\n",
+        "x = 432\n",
+        "while x > 100:\n",
+        "  x -= 10\n",
+        "  print(x)"
       ]
     },
     {
