--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -633,19 +633,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "id": "cd8f1a7a-d9cf-4498-a677-e17d64d0eea0",
       "metadata": {
         "id": "cd8f1a7a-d9cf-4498-a677-e17d64d0eea0"
       },
       "outputs": [],
       "source": [
-        "#si-\n",
+        "#si-taxi\n",
         "def taxiPrice(distance):\n",
-        "  base_fee = 4.00\n",
-        "  charge_per_140m = 0.25\n",
-        "  price = base_fee + (distance * 1000 //140) * charge_per_140m\n",
-        "  return price"
+        "    base_fee = 4.00\n",
+        "    charge_per_140m = 0.25\n",
+        "    # Convert distance to meters\n",
+        "    distance_in_meters = distance * 1000\n",
+        "    # Calculate the number of 140 meter segments\n",
+        "    num_segments = distance_in_meters // 140\n",
+        "    # Calculate the total fare\n",
+        "    total_price = base_fee + (num_segments * charge_per_140m)\n",
+        "    return round(total_price, 2)\n",
+        "\n"
       ]
     },
     {
