--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -644,10 +644,10 @@
         "def taxiPrice(distance):\n",
         "    base_fee = 4.00\n",
         "    charge_per_140m = 0.25\n",
-        "    # Convert distance to meters\n",
+        "    # Convert distance from kilometers to meters\n",
         "    distance_in_meters = distance * 1000\n",
-        "    # Calculate the number of 140 meter segments\n",
-        "    num_segments = distance_in_meters // 140\n",
+        "    # Calculate the number of 140 meter segments, rounding up to the nearest segment\n",
+        "    num_segments = (distance_in_meters / 140)\n",
         "    # Calculate the total fare\n",
         "    total_price = base_fee + (num_segments * charge_per_140m)\n",
         "    return round(total_price, 2)\n",
