--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -140,7 +140,34 @@
       "source": [
         "#si-decibel\n",
         "\n",
-        "x = int(input())"
+        "x = int(input())\n",
+        "# Sound level comparison program\n",
+        "# Noise levels in decibels and their corresponding sounds\n",
+        "noise_levels = {\n",
+        "    40: \"Quiet Room\",\n",
+        "    70: \"Alarm Clock\",\n",
+        "    106: \"Lawnmower\",\n",
+        "    130: \"Jackhammer\"\n",
+        "}\n",
+        "\n",
+        "# Read the sound level input from the user\n",
+        "x = float(input(\"Enter the sound level in decibels: \"))\n",
+        "\n",
+        "# Check if the input matches one of the noise levels\n",
+        "if x in noise_levels:\n",
+        "    print(f\"The sound level matches the volume of a {noise_levels[x]}.\")\n",
+        "else:\n",
+        "    # Determine which range the sound level falls into\n",
+        "    if x < 40:\n",
+        "        print(\"The sound level is quieter than a Quiet Room.\")\n",
+        "    elif 40 < x < 70:\n",
+        "        print(\"The sound level is between a Quiet Room and an Alarm Clock.\")\n",
+        "    elif 70 < x < 106:\n",
+        "        print(\"The sound level is between an Alarm Clock and a Lawnmower.\")\n",
+        "    elif 106 < x < 130:\n",
+        "        print(\"The sound level is between a Lawnmower and a Jackhammer.\")\n",
+        "    elif x > 130:\n",
+        "        print(\"The sound level is louder than a Jackhammer.\")\n"
       ]
     },
     {
